fix layout css, add button mobile

--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -53,13 +53,10 @@
     grid-template-areas:
       "a a b b"
       "c d e e";
+      & a{
+        min-height: 60px;
+      }
   }
-  // .img-landing {
-  //   img {
-  //     width: auto;
-  //     height: 250px;
-  //   }
-  // }
 }
 
 @media only screen and (max-width: 500px) {
